fix scrollbar, dropdown, config, walker & other css fixes

--- a/src/style/frontend/menu.scss
+++ b/src/style/frontend/menu.scss
@@ -272,10 +272,18 @@ NAVBAR GENERAL STYLES
 }
 
 /* bugfix: For sub-submenus that climb out of the right side of the screen and, on some WP Themes, they call the horizontal scroll of the browser when opening the first level submenu. */
+.gm-navbar .gm-navbar-nav > .gm-dropdown:not(.gm-open) .gm-dropdown-menu-wrapper {
+  display: none;
+}
+
+.gm-navbar .gm-navbar-nav > .gm-dropdown:hover .gm-dropdown-menu-wrapper {
+  display: block;
+}
+
 .gm-navbar .gm-navbar-nav > .gm-dropdown .gm-dropdown-menu .gm-dropdown-submenu:not(.gm-open) .gm-dropdown-menu-wrapper {
   display: none;
 }
 
-.gm-navbar .gm-navbar-nav > .gm-dropdown .gm-dropdown-menu .gm-dropdown-submenu:hover .gm-dropdown-menu-wrapper {
+.gm-navbar .gm-navbar-nav > .gm-dropdown .gm-dropdown-menu .gm-dropdown-submenu:hover > .gm-dropdown-menu-wrapper {
   display: block;
 }
